crates/metaltile/tests/error/open_ended_range_in_loop.stderr
error: open-ended ranges are not supported in MetalTile loops
 --> tests/error/open_ended_range_in_loop.rs:8:15
  |
8 |     for _i in 0u32.. {
  |               ^^^^^^
